css/src/_home.scss
.page-template-home {
	.section ~ .section {
		margin-top: $global-layout-space * 2;
		margin-bottom: 0;
	}

	.cell.tall > * {
		height: 100%;
	}

	.quote.card {
		padding: $card-padding * 4 $card-padding;
		margin-bottom: 0;

		p {
			font-size: 1.75rem;
			line-height: 1.25;
			margin-bottom: 0;

			&::after {
				content: "";
				display: block;
				border-top: 1px solid #000;
				width: 1.25em;
				margin-top: $paragraph-margin-bottom;
			}
		}
	}

	.item {
		&.post-cat .post-1 {
			@include breakpoint(medium) {
				.date.button {
					margin-bottom: $paragraph-margin-bottom / 2;
				}

				p.cell {
					margin-bottom: 0;
				}

				@include breakpoint(850px down) {
					.cell {
						@include xy-cell(12, true, 0);
						order: inherit;
					}

					p.cell {
						margin-bottom: $paragraph-margin-bottom;
					}
				}
			}
		}
	}

	.livewhale {
		h2 {
			color: $white;
		}

		.heading-sideline {
			padding: {
				left: $global-layout-space + .94rem;
				right: $global-layout-space + .94rem;
			}
		}

		.title-line {
			border-top-color: $light-blue;
		}
	}

	.in-the-news {
		a {
			display: block;
			padding: $global-layout-space * 2 $global-layout-space;

			&:active,
			&:hover {
				text-decoration: none;
				outline: 1px dashed $dark-blue;
			}
		}

		.entry-title {
			font: 700 1.15rem/1.2 $opensans;
		}

		.nolink {
			padding: $card-padding + $global-layout-space * 2 $card-padding + $global-layout-space;
		}
	}

	@include breakpoint(small only) {
		.af4-entry-compact ~ .af4-entry-compact {
			margin-bottom: $global-layout-space * 1.5;
		}
	}

	@include breakpoint(medium) {
		.section ~ .section {
			margin-top: $global-layout-space * 5;
			margin-bottom: 0;
		}
}
}

